@@ -6,6 +6,8 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
+
 @RequiredArgsConstructor
 
 public enum Role {
@@ -40,7 +42,7 @@ public enum Role {
     public List<SimpleGrantedAuthority> getAuthorities() {
         var authorities =getPermissions().stream()
                 .map(permission -> new SimpleGrantedAuthority(permission.name()))
-                .toList();
+                .collect(Collectors.toList());
         authorities.add(new SimpleGrantedAuthority("ROLE_" + name()));
         return authorities;
     }
